<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bkg_character_gray">

        <ImageView
            android:id="@+id/iv_character"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_status"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/status_and_species_text_hint"
            android:src="@drawable/ic_status"
            app:layout_constraintBottom_toBottomOf="@+id/tv_status_and_species_and_gender"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toTopOf="@id/tv_status_and_species_and_gender"
            app:tint="@color/bkg_status_red" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextStyle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/name_text_hint" />

        <TextView
            android:id="@+id/tv_status_and_species_and_gender"
            style="@style/TextStyle.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@id/iv_status"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            tools:text="@string/status_and_species_text_hint" />

        <TextView
            android:id="@+id/tv_last_location_title"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toBottomOf="@id/tv_status_and_species_and_gender"
            tools:text="@string/last_location_text_title" />

        <TextView
            android:id="@+id/tv_last_location"
            style="@style/TextStyle.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toBottomOf="@id/tv_last_location_title"
            tools:text="@string/last_location_text_hint" />

        <TextView
            android:id="@+id/tv_origin_title"
            style="@style/TextStyle.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toBottomOf="@id/tv_last_location"
            tools:text="@string/origin_text_title" />

        <TextView
            android:id="@+id/tv_origin"
            style="@style/TextStyle.Normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/iv_character"
            app:layout_constraintTop_toBottomOf="@id/tv_origin_title"
            tools:text="@string/origin_text_hint" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>